fix(common.css): align text to the left

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -205,6 +205,7 @@
       }
 
     .title {
+      text-align: left;
       strong {
         color: $vue-dark-gray;
         display: block;
